# findora-toolbox

./: .gitignore  LICENSE  README.md  __init__.py  pyvenv.cfg  requirements.txt  requriements.txt  setup.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: FUNDING.yml  bug_report.md  feedback.md
.github/web/src/: config.py
.github/web/src/static/js/: token.js
.github/web/src/templates/: header.html  stats.html
release-from-jail/: Config.py  Core.py  Main.py  README.md  Trans.py  properties.conf.example  requirements.txt
release-from-jail/abis/: Staking.json
src/: __init__.py  app.py  config.py  installer.py  library.py  safety_clean.py  shared.py  test-stats.py  test_fn_stats.py  test_remote_block.py  toolbox.py  updater.py
src/messages/: framenu.txt
tests/: test_shared.py
web/: README.md
web/src/: app.py  config.py  shared.py
web/src/static/css/: style.css
web/src/templates/: 400.html  401.html  404.html  405.html  419.html  500.html  badlogin.html  base.html  footer.html  index.html
