[metadata]
name = findora_toolbox
version = 1.1.3
author = EasyNode.PRO
author_email = support@easynode.pro
description = Findora FRA Validator Node Toolbox and Easy Setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-node-pro/findora-toolbox
project_urls =
    Bug Tracker = https://github.com/easy-node-pro/findora-toolbox/issues
    repository = https://github.com/easy-node-pro/findora-toolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = findora_toolbox = src
